Add basic skeleton

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hi I'm Mirjam.
+<!DOCTYPE html> 
+<!-- showing the website what kind of code you are using, html5 -->
+<html lang="en">
+    <!-- start of html file -->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author"content="Mirjam de Korte"/>
+    <meta name="description" content="I am a Design for Interaction master student trying to figure out coding">
+    <title>Mirjam de Korte</title>
+</head>
+<body>
+    <!--everything people see goes here  -->
+
+</body>
+</html>
+<!-- end of html, no more code after this! beginning and end html tag -->
