--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author"content="Mirjam de Korte"/>
     <meta name="description" content="I am a Design for Interaction master student trying to figure out coding">
     <title>Mirjam de Korte</title>
+    <link rel="stylesheet" href="./main.css"/>
 </head>
 <body>
     <!--everything people see goes here  -->
@@ -16,19 +17,33 @@
     <!-- <h2>Mirjam de Korte</h2>
     <H3>Mirjam de Korte</H3>
     <H4>Mirjam de Korte</H4> -->
-    <img src="Mirjam_picture.jpg" alt="dreaming of better world" width="300"/>
-<p>Hi! I am Mirjam. I am a MSc student Design for Interaction. currently I am working on improving the experience for children on the Emergency Department of the Erasmus MC. Through emerging myself in the context I am trying to design a fitting interaction for both health caretakers and the visiting children. This project suits my main design goals: To reach social impact with my design, to design for happiness and to design with and for people.  I am currently searching for a junior design function in social, sustainable or service design.
+    <div class="container">
+        <div class="image">
 
-    <!-- bold something: <strong></strong> amkes something italic em tag: emphasis-->
-</p>
-<p>
-<a href="https://www.linkedin.com/in/mirjam-de-korte-550300157/"target="_blank">linkedIn</a> ◘
- 
-<a href="./portfolio_fake.pdf" target="_blank" > Portfolio</a>◘
-<a href="./cv_fake.pdf" target="_blank"> cv </a>◘
-<!-- <a href="mailto:a.m.dekorte@student.tudelft.nl">email</a> -->
-<a href="tel:+31612345678">phone</a>◘
-</p>
+            <img src="Mirjam_picture.jpg" alt="dreaming of better world"/>
+        </div>
+
+        <div class="paragraphs">
+            <p class="party">
+                Hi! I am Mirjam. I am a <strong>student Design for Interaction.</strong> Currently I am working on improving the experience for children on the Emergency Department of the Erasmus MC. Through emerging myself in the context I am trying to design a fitting interaction for both health caretakers and the visiting children. This project suits my main design goals: To reach social impact with my design, to design for happiness and to design with and for people.  I am currently searching for a junior design function in social, sustainable or service design.
+              
+
+
+            <!-- bold something: <strong></strong> amkes something italic em tag: emphasis-->
+            </p> 
+
+            <p class="party">
+                <a href="https://www.linkedin.com/in/mirjam-de-korte-550300157/"target="_blank">linkedIn</a> ◘
+                
+                <a href="./portfolio_fake.pdf" target="_blank" > Portfolio</a>◘
+                <a href="./cv_fake.pdf" target="_blank"> cv </a>◘
+                <!-- <a href="mailto:a.m.dekorte@student.tudelft.nl">email</a> -->
+                <a href="tel:+31612345678">phone</a>◘
+            </p>
+        </div>
+    </div>
+
+
 </body>
 </html>
 <!-- end of html, no more code after this! beginning and end html tag -->
