--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="paragraphs">
-            <p class="party">
+            <p class="party1">
                 Hi! I am Mirjam. I am a <strong>student Design for Interaction.</strong> Currently I am working on improving the experience for children on the Emergency Department of the Erasmus MC. Through emerging myself in the context I am trying to design a fitting interaction for both health caretakers and the visiting children. This project suits my main design goals: To reach social impact with my design, to design for happiness and to design with and for people.  I am currently searching for a junior design function in social, sustainable or service design.
               
 
@@ -32,7 +32,7 @@
             <!-- bold something: <strong></strong> amkes something italic em tag: emphasis-->
             </p> 
 
-            <p class="party">
+            <p class="party2">
                 <a href="https://www.linkedin.com/in/mirjam-de-korte-550300157/"target="_blank">linkedIn</a> ◘
                 
                 <a href="./portfolio_fake.pdf" target="_blank" > Portfolio</a>◘
